--- a/client/stylesheets/partials/_elements.general.scss
+++ b/client/stylesheets/partials/_elements.general.scss
@@ -1,5 +1,9 @@
 // general styling for base elements:
 
+html {
+  overflow-y: hidden;
+}
+
 blockquote {
   background: #eee;
 }
